<resources>
    <string name="app_name">Your Adventure</string>
    <string name="defaulClass">Bersherker</string>
    <string name="knight_text">Caballero</string>
    <string name="thief_text">Ladrón</string>
    <string name="wizard_text">Mago</string>
    <string name="berserker_text">Berserker</string>
    <string name="buttonNext">Siguiente</string>
    <string name="elf_text">Elfo</string>
    <string name="human_text">Humano</string>
    <string name="goblin_text">Goblin</string>
    <string name="dwarf_text">Enano</string>
    <string name="name_string">Nombre</string>
    <string name="level_stenght">Nivel de fuerza</string>
    <string name="level_guard">Nivel de defensa</string>
    <string name="weight_backpack">Peso de la mochila</string>
    <string name="health_points">Puntos de vida</string>
    <string name="waller_purchase">Dinero en la cartera</string>
    <string name="restart_button">Volver a empezar</string>
    <string name="start_button">Comenzar aventura</string>
    <string name="roll_dice_text">Roll Dice</string>
    <string name="enemy_action_a">Atacar</string>
    <string name="enemy_action_b">Huir</string>
    <string name="city_action_a">Entrar</string>
    <string name="city_action_b">Continuar</string>
    <string name="object_action_a">Recoger</string>
    <string name="object_action_b">Continuar</string>
    <string name="trader_action_a">Comerciar</string>
    <string name="trader_action_b">Continuar</string>
    <string name="player_resume_dice">Resumen de partida</string>
    <string name="trade_buy">Comprar</string>
    <string name="trade_sell">vender</string>
    <string name="trade_cancel">Cancelar</string>
    <string name="enemy_heal">Curar</string>
    <string name="game_stats">Clase: {0}\nRaza: {1}\nFuerza: {2}\nDefensa: {3}</string>
    <string name="dialog_password_subtitle">Este perfil esta protegido por una constraseña. Por favor para continuar introducela.</string>
</resources>